--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="user.png" >
+                        <img src="images/user.png" >
                     </div>
                     <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -78,23 +78,22 @@
         <!-------------------Projects------------------>
         <div id="projects">
             <div class="container">
-                <h1 class="sub-title">My Projects</h1>
+                <h1 class="sub-title">My Services</h1>
                 <div class="projects-list">
                     <div>
                         
                         <i class="fa-brands fa-app-store"></i>
-                        <h2>Taptap apps</h2>
+                        <h2>Java app development</h2>
                         <p>Build user and admin application,
                             where admin can send notifications to users
                             using UI of the app.
-                            Used Firebase cloud messaging service to send notifications.
                         </p>
                         <a href="#">Know more</a>
                     </div>
                     <div>
 
                         <i class="fa-solid fa-crop-simple"></i>
-                        <h2>Quiz application</h2>
+                        <h2>Kotlin application development</h2>
                         <p>Build a quiz app using kotlin and android studio.This quiz app contains navigation bar,
                             images,options and finish page.
                         </p>
@@ -103,7 +102,7 @@
                     <div>
 
                         <i class="fa-regular fa-newspaper"></i>
-                        <h2>News App with API</h2>
+                        <h2>Flutter App with API</h2>
                         <p>Build Flutter application with newsapi.org.
                             User can login and view the news and logout
                             from this application.
@@ -119,32 +118,33 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="work-1.png" alt="">
+                <img src="images/work-1.png" alt="">
                 <div class="layer">
                     <h3>Taptap App</h3>
                     <p>Build user and admin application,
                         where admin can send notifications to users
                         using UI of the app.</p>
-                    <a href="#"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://github.com/sushmakoteswari/sushmaPortfolio.github.io"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
-                <img src="work-2.png" alt="">
+                <img src="images/work-2.png" alt="">
                 <div class="layer">
                     <h3>Quiz application</h3>
-                    <p>Build a quiz app using kotlin and android studio.This quiz app contains navigation bar,
+                    <p>Build a quiz app using kotlin and android studio.
+                        This quiz app contains navigation bar,
                         images,options and finish page.</p>
-                    <a href="#"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://github.com/sushmakoteswari/Quiz-app"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
-                <img src="work-3.png" alt="">
+                <img src="images/work-3.png" alt="">
                 <div class="layer">
                     <h3>News App Using API</h3>
                     <p>Build Flutter application with newsapi.org.
                         User can login and view the news and logout
                         from this application.</p>
-                    <a href="#"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://github.com/sushmakoteswari/Flutter-Application-With-Login-Screen"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
@@ -169,7 +169,7 @@
                     <a href="https://www.linkedin.com/in/sushmakoteswari/"><i class="fa-brands fa-linkedin"></i></a>
 
                 </div>
-                <a href="my-cv.pdf" download class="btn btn2">Download CV</a>
+                <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
