--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="images/user.png" >
+                        <img src="user.png" >
                     </div>
                     <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -118,7 +118,7 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images/work-1.png" alt="">
+                <img src="work-1.png" alt="">
                 <div class="layer">
                     <h3>Taptap App</h3>
                     <p>Build user and admin application,
@@ -128,7 +128,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/work-2.png" alt="">
+                <img src="work-2.png" alt="">
                 <div class="layer">
                     <h3>Quiz application</h3>
                     <p>Build a quiz app using kotlin and android studio.
@@ -138,7 +138,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/work-3.png" alt="">
+                <img src="work-3.png" alt="">
                 <div class="layer">
                     <h3>News App Using API</h3>
                     <p>Build Flutter application with newsapi.org.
@@ -169,7 +169,7 @@
                     <a href="https://www.linkedin.com/in/sushmakoteswari/"><i class="fa-brands fa-linkedin"></i></a>
 
                 </div>
-                <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+                <a href="my-cv.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
