--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <p>Build user and admin application,
                         where admin can send notifications to users
                         using UI of the app.</p>
-                    <a href="https://github.com/sushmakoteswari/sushmaPortfolio.github.io"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://github.com/sushmakoteswari/Taptap-apps"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
